# pycologne-app

./: .gitignore  .hgignore  AUTHORS  Makefile  README.md  README.rst  babel.cfg  config.py  pylint.rc  pymove3d.py  pyproject.toml  requirements-deploy.txt  requirements-dev.txt  requirements.txt  sayings.py  setup.py  tox.ini  webapp.py
.github/workflows/: ci.yml
_tests/: test_e2e.py  test_http_status.py  test_sayings.py
bootstrap-source/schrott/css_temp/: pymove3d.css
docs/: renovation-2026.md
lib/: events.py
pycgnweb/: __init__.py  __main__.py  config.py  events.py  sayings.py  webapp.py
static/css/: bootstrap.css  pycologne.css  pymove3d.css
static/fonts/: gandhiserif-bold-webfont.eot  gandhiserif-regular-webfont.eot
static/images/carousel/: README
static/js/: map.js
static/less/: bootstrap.less  pycologne.less  pymove3d.less  variables.less
templates/: 404.html  claims.html  competition.html  content.html  coursematerial.html  dates.html  event.html  events.html  footer.html  impressions_2013.html  impressions_2014.html  imprint.html  index.html  join.html  jumbotron-competition.html  jumbotron-coursematerial.html  jumbotron-default.html  jumbotron-submission.html  jumbotron-task.html  privacy.html  prizes.html  submission.html  task.html  theme.html
templates/de/: 404.html  competition.html  coursematerial.html  dates.html  footer.html  imprint.html  index.html  jumbotron-competition.html  jumbotron-task.html  privacy.html  submission.html  task.html
templates/de/archive/2013/competitions/rst/: 2013.rst
templates/de/archive/competitions/2013/: index.html
templates/de/archive/competitions/2014/: index.html
templates/de/rst/: competition.rst  contact.rst  coursematerial.rst  dates.rst  events.rst  imprint.rst  join.rst  privacy.rst  task.rst
templates/en/: 404.html  competition.html  coursematerial.html  dates.html  imprint.html  index.html  jumbotron-coursematerial.html  privacy.html  submission.html  task.html  theme.html
templates/en/archive/2013/competitions/rst/: 2013.rst
templates/en/archive/competitions/2013/: comptetition_2014.html  index.html
templates/en/archive/competitions/2013/rst/: 2013.rst
templates/en/archive/competitions/2014/: comptetition_2013.html  index.html  jumbotron-competition-2014.html
templates/en/rst/: competition.rst  coursematerial.rst  dates.rst  imprint.rst  privacy.rst  prizes.rst  submission.rst
templates/md/: about.md  contact.md  events.md  join.md
templates/md/events/: 2017-08-09.md  2017-09-13.md  2017-10-11.md  2017-11-08.md  2017-12-13.md  2018-01-10.md  2024-02-14.md  2026-05-13.md  2026-06-10.md  2026-07-08.md  2026-08-12.md
templates/rst/: about.rst  contact.rst  events.rst  join.rst  privacy.rst
templates/rst/events/: 2017-08-09.rst  2017-09-13.rst  2017-10-11.rst  2017-11-08.rst  2017-12-13.rst  2018-01-10.rst  2024-02-14.rst
translations/: pymove3d.pot
translations/de/LC_MESSAGES/: messages.mo  messages.po
translations/en/LC_MESSAGES/: messages.po
