[project]
name = "pycologne-app"
version = "1.0"
description = "PyCologne Flask Webseite"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "PyCologne", email = "webteam@pycologne.de" }]
maintainers = [
    { name = "Daniel Steinberger", email = "daniel.steinberger@dvs.ag" },
]
dependencies = [
    "flask>=3.0.1",
    "pytz>=2023.3.post1",
    "six>=1.16.0",
    "python-dateutil>=2.8.2",
    "docutils>=0.20.1",
    "babel>=2.14.0",
]

[project.urls]
Repository = "https://github.com/Daniel-Steinberger/pycologne-app"
Homepage = "https://www.pycologne.de"

[project.scripts]
pycologne-webapp = "pycgnweb.webapp:main"

[dependency-groups]
dev = [
    "selenium>=4.16.0",
    "pytest>=7.4.4",
    "pylint>=3.0.3",
    "flask-testing>=0.8.1",
    "pyflakes>=3.2.0",
    "flake8-docstrings>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pycgnweb"]
