[project]
name = "pycologne-app"
version = "1.0"
description = "PyCologne Flask Webseite"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "PyCologne", email = "webteam@pycologne.de" }]
maintainers = [
    { name = "Daniel Steinberger", email = "daniel.steinberger@dvs.ag" },
]
dependencies = [
    "flask>=3.0",
    "python-dateutil>=2.9",
    "docutils>=0.21",
    "babel>=2.16",
]

[project.urls]
Repository = "https://github.com/Daniel-Steinberger/pycologne-app"
Homepage = "https://www.pycologne.de"

[project.scripts]
pycologne-webapp = "pycgnweb.webapp:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pylint>=3.3",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest-playwright>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pycgnweb"]
