[project]
name = "pycologne-app"
version = "1.0"
description = "PyCologne Flask Webseite"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "PyCologne", email = "webteam@pycologne.de" }]
maintainers = [
    { name = "Daniel Steinberger", email = "daniel.steinberger@dvs.ag" },
]
dependencies = [
    "flask>=3.0",
    "python-dateutil>=2.9",
    "markdown-it-py>=4.2.0",
    "babel>=2.16",
    "pygments>=2.20.0",
]

[project.urls]
Repository = "https://github.com/Daniel-Steinberger/pycologne-app"
Homepage = "https://www.pycologne.de"

[project.scripts]
pycologne-webapp = "pycgnweb.webapp:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pylint>=3.3",
    "ruff>=0.15.14",
    "mypy>=2.1.0",
    "pytest-playwright>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pycgnweb"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["templates", "static", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = [
    "E501",  # line length is handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"_tests/**" = ["S101"]  # asserts are fine in tests

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["dateutil.*", "pygments.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["_tests"]
markers = [
    "e2e: end-to-end tests using a real browser (deselect with '-m \"not e2e\"')",
]
addopts = "-m 'not e2e'"
